// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > matches snapshot for multiple select 1`] = `
<div
  class="multiple-mode multiselect"
>
  <label
    for="multiselect"
  >
    Select
  </label>
  <div
    class="multiselect-input"
  >
    <span>
      
      <span
        class="selected-option"
      >
        FE
      </span>
      
    </span>
  </div>
  <ul
    class="multiselect-dropdown"
  >
    
    <li
      class="multiselect-option"
    >
      FR
    </li>
    <li
      class="multiselect-option"
    >
      DE
    </li>
    <li
      class="multiselect-option"
    >
      BE
    </li>
    <li
      class="multiselect-option selected"
    >
      FE
    </li>
    <li
      class="multiselect-option"
    >
      RE
    </li>
    
  </ul>
</div>
`;

exports[`MultiSelect > matches snapshot for single select 1`] = `
<div
  class="multiselect"
>
  <label
    for="multiselect"
  >
    Select
  </label>
  <div
    class="multiselect-input"
  >
    <span>
      
      <span
        class="selected-option"
      >
        FR
      </span>
      
    </span>
  </div>
  <ul
    class="multiselect-dropdown"
  >
    
    <li
      class="multiselect-option selected"
    >
      FR
    </li>
    <li
      class="multiselect-option"
    >
      DE
    </li>
    <li
      class="multiselect-option"
    >
      BE
    </li>
    <li
      class="multiselect-option"
    >
      FE
    </li>
    <li
      class="multiselect-option"
    >
      RE
    </li>
    
  </ul>
</div>
`;
